# business_plan_creator

./: README.md  business_plan.md  example_business_plan.md  pyproject.toml  requirements.txt  run.sh
src/: __init__.py  backups.py  dataset_1382851.csv  frontend.py  old_prompts.txt  test.ipynb  test_text_for_plan.txt
src/business_plan_creator/: backend.py  main.py
src/business_plan_creator/crews/businessplan_crew/: businessplan_crew.py
src/business_plan_creator/crews/businessplan_crew/config/: agents.yaml  tasks.yaml
src/business_plan_creator/crews/review_business_plan/: review_business_plan.py
src/business_plan_creator/crews/review_business_plan/config/: agents.yaml  tasks.yaml
src/business_plan_creator/crews/webscraper_crew/: webscraper_crew.py
src/business_plan_creator/crews/webscraper_crew/config/: agents.yaml  tasks.yaml
